--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotpot Catcher Game</title>
+    <title>🍳接火鍋遊戲</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
 
         <section class="rules">
             <h2>遊戲規則</h2>
-            <p>在 30 秒內接住火鍋料並獲取分數！目標是達到 <strong>50 分</strong> 以上，換取一盤美味的豬血糕！</p>
+            <p>在 30 秒內接住火鍋料並獲取分數！目標是達到 <strong>50 分</strong> 以上，加油!😘</p>
             <ul>
                 <li><strong>一號火鍋料</strong>（魚丸）：<span class="score">+5 分</span></li>
                 <li><strong>二號火鍋料</strong>（豆腐）：<span class="score">+4 分</span></li>
@@ -29,10 +29,7 @@
             <p><strong>手機</strong>：使用手機重力感應控制左右移動。</p>
         </section>
 
-        <section class="score-info">
-            <h2>遊戲目標</h2>
-            <p>達到 <strong>50 分</strong> 以上即可換取一盤豬血糕！</p>
-        </section>
+
 
         <section class="game">
             <div class="info">
